--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prop-types": "^15.5.4",
     "react": "^15.5.3",
     "react-codemirror": "^0.3.0",
-    "react-dom": "^1  5.5.3",
+    "react-dom": "^15.5.3",
     "react-router-dom": "^4.0.0",
     "react-swipeable": "^3.9.2",
     "react-tooltip": "^3.3.0",
@@ -27,6 +27,7 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^2.2.0",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
