--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "react": "^16.2.0",
+    "react-codemirror2": "^3.0.7",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.2.0",
+    "react-markdown": "^3.1.4",
     "react-router": "^4.2.0",
     "scryptsy": "^2.0.0",
     "source-map-loader": "^0.2.1",
