--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/codemirror": "0.0.54",
     "@types/enzyme": "^3.1.6",
+    "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/react-router": "^4.0.20",
+    "@types/react-router-dom": "^4.2.3",
     "antd": "^3.0.0",
     "autoprefixer": "7.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chacha": "^2.1.0",
     "chalk": "1.1.3",
+    "codemirror": "^5.33.0",
     "css-loader": "0.28.4",
     "detect-node": "^2.0.3",
     "dexie": "^2.0.1",
@@ -21,6 +26,7 @@
     "jest-cli": "^20.0.4",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
+    "mobx-react-devtools": "^4.2.15",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -31,6 +37,7 @@
     "react-dom": "^16.2.0",
     "react-markdown": "^3.1.4",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "scryptsy": "^2.0.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.18.2",
