--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jest-cli": "^20.0.4",
+    "js-nacl": "^1.2.2",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-react-devtools": "^4.2.15",
