--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/codemirror": "0.0.54",
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/react-big-calendar": "^0.17.0",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
     "antd": "^3.1.4",
@@ -34,6 +35,7 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "react": "^16.2.0",
+    "react-big-calendar": "^0.17.0",
     "react-codemirror2": "^3.0.7",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.2.0",
