--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/react-big-calendar": "^0.17.0",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
-    "antd": "^3.1.4",
+    "antd": "3.1.5",
     "autoprefixer": "7.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chacha": "^2.1.0",
@@ -38,6 +38,8 @@
     "react-big-calendar": "^0.17.0",
     "react-codemirror2": "^3.0.7",
     "react-dev-utils": "^4.0.1",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
     "react-markdown": "^3.1.4",
     "react-router": "^4.2.0",
