--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "antd3",
+  "name": "idnadrev2ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,8 @@
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/react-big-calendar": "^0.17.0",
+    "@types/react-dnd": "^2.0.34",
+    "@types/react-dnd-html5-backend": "^2.1.8",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
     "antd": "3.1.5",
