--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
     "@types/react-big-calendar": "^0.17.0",
+    "@types/react-dnd": "^2.0.34",
+    "@types/react-dnd-html5-backend": "^2.1.8",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
     "antd": "3.1.5",
@@ -38,8 +40,9 @@
     "react-big-calendar": "^0.17.0",
     "react-codemirror2": "^3.0.7",
     "react-dev-utils": "^4.0.1",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
-    "react-draggable": "^3.0.5",
     "react-markdown": "^3.1.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
