--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/codemirror": "0.0.54",
     "@types/enzyme": "^3.1.6",
     "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/mime-types": "^2.1.0",
     "@types/react-big-calendar": "^0.17.0",
     "@types/react-dnd": "^2.0.34",
     "@types/react-dnd-html5-backend": "^2.1.8",
@@ -28,6 +29,7 @@
     "jest": "20.0.4",
     "jest-cli": "^20.0.4",
     "js-nacl": "^1.2.2",
+    "mime-types": "^2.1.18",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-react-devtools": "^4.2.15",
