--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dnd-html5-backend": "^2.1.8",
     "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
-    "antd": "3.1.5",
+    "antd": "3.2.1",
     "autoprefixer": "7.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chacha": "^2.1.0",
@@ -58,7 +58,7 @@
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.2.0",
-    "typescript": "~2.5.3",
+    "typescript": "2.6.2",
     "url-loader": "0.5.9",
     "uuid": "^3.1.0",
     "webpack": "3.5.1",
