--- a/package.json
+++ b/package.json
@@ -3,139 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/codemirror": "0.0.54",
-    "@types/enzyme": "^3.1.6",
-    "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/mime-types": "^2.1.0",
-    "@types/react-big-calendar": "^0.17.0",
-    "@types/react-dnd": "^2.0.34",
-    "@types/react-dnd-html5-backend": "^2.1.8",
-    "@types/react-router": "^4.0.20",
-    "@types/react-router-dom": "^4.2.3",
-    "antd": "3.2.1",
-    "autoprefixer": "7.1.2",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chacha": "^2.1.0",
-    "chalk": "1.1.3",
-    "codemirror": "^5.33.0",
-    "css-loader": "0.28.4",
-    "detect-node": "^2.0.3",
+    "antd": "^3.9.2",
+    "codemirror": "^5.40.0",
     "dexie": "^2.0.4",
-    "dotenv": "4.0.0",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
-    "jest-cli": "^20.0.4",
     "js-nacl": "^1.2.2",
-    "mime-types": "^2.1.18",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
-    "mobx-react-devtools": "^4.2.15",
-    "moment": "^2.20.1",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.6",
-    "promise": "8.0.1",
-    "react": "^16.2.0",
-    "react-big-calendar": "^0.17.0",
-    "react-codemirror2": "^3.0.7",
-    "react-dev-utils": "^4.0.1",
-    "react-dnd": "^2.5.4",
-    "react-dnd-html5-backend": "^2.5.4",
-    "react-dom": "^16.2.0",
-    "react-markdown": "^3.1.4",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "scryptsy": "^2.0.0",
-    "source-map-loader": "^0.2.1",
-    "style-loader": "0.18.2",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "text-encoding": "^0.6.4",
-    "ts-jest": "^20.0.7",
-    "ts-loader": "^2.3.7",
-    "tslint": "^5.7.0",
-    "tslint-loader": "^3.5.3",
-    "tslint-react": "^3.2.0",
-    "typescript": "2.6.2",
-    "url-loader": "0.5.9",
-    "uuid": "^3.1.0",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.7.1",
-    "webpack-manifest-plugin": "1.2.1",
-    "whatwg-fetch": "2.0.3"
-  },
-  "devDependencies": {
-    "@types/jest": "^21.1.8",
-    "@types/node": "^8.0.57",
-    "@types/react": "^16.0.28",
-    "@types/react-dom": "^16.0.3",
-    "@types/text-encoding": "0.0.32",
-    "@types/uuid": "^3.4.3",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "fake-indexeddb": "^2.0.3",
-    "node-localstorage": "^1.3.0",
-    "realistic-structured-clone": "^1.0.1",
-    "ts-jest": "^21.2.4"
+    "mime-types": "^2.1.20",
+    "mobx": "^5.1.0",
+    "mobx-react": "^5.2.6",
+    "mobx-react-devtools": "^6.0.3",
+    "react-markdown": "^3.6.0",
+    "react": "^16.5.0",
+    "react-codemirror2": "^5.1.0",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
+    "react-dom": "^16.5.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "2.17.0",
+    "scryptsy": "^2.0.0y",
+    "uuid": "^3.3.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "testJest": "jest"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   },
-  "jest": {
-    "mapCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).ts?(x)"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^.+\\.tsx?$": "<rootDir>/config/jest/typescriptTransform.js",
-      "^.+\\.ts?$": "<rootDir>/config/jest/typescriptTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "web.js",
-      "js",
-      "web.jsx",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "/home/scar/projects/antd3/tsconfig.test.json"
-      }
-    }
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "@types/mime-types": "^2.1.0",
+    "@types/codemirror": "^0.0.60",
+    "@types/jest": "^23.3.2",
+    "@types/node": "^10.9.4",
+    "@types/react": "^16.4.13",
+    "@types/react-dnd": "^3.0.2",
+    "@types/react-dnd-html5-backend": "^3.0.2",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-router": "^4.0.30",
+    "@types/react-router-dom": "^4.3.0",
+    "@types/uuid": "^3.4.4",
+    "typescript": "^3.0.3",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16.3": "^1.2.0"
   }
 }
