--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "mobx": "^5.1.0",
     "mobx-react": "^5.2.6",
     "mobx-react-devtools": "^6.0.3",
-    "react-markdown": "^3.6.0",
+    "promise-worker": "^2.0.0",
     "react": "^16.5.0",
     "react-codemirror2": "^5.1.0",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.5.0",
+    "react-markdown": "^3.6.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.17.0",
@@ -30,9 +31,9 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/mime-types": "^2.1.0",
     "@types/codemirror": "^0.0.60",
     "@types/jest": "^23.3.2",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^10.9.4",
     "@types/react": "^16.4.13",
     "@types/react-dnd": "^3.0.2",
@@ -41,8 +42,8 @@
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
     "@types/uuid": "^3.4.4",
-    "typescript": "^3.0.3",
     "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16.3": "^1.2.0"
+    "enzyme-adapter-react-16.3": "^1.2.0",
+    "typescript": "^3.0.3"
   }
 }
