--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.17.0",
-    "scryptsy": "^2.0.0y",
+    "scryptsy": "^2.0.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
