--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.9.2",
+    "binary-type-tree": "^1.3.0",
     "codemirror": "^5.40.0",
     "dexie": "^2.0.4",
     "js-nacl": "^1.2.2",
