--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@types/uuid": "^3.4.4",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16.3": "^1.2.0",
+    "fake-indexeddb": "^2.0.4",
+    "mock-local-storage": "^1.0.5",
     "typescript": "^3.0.3"
   }
 }
