--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/codemirror": "^0.0.60",
+    "@types/enzyme": "^3.1.14",
     "@types/jest": "^23.3.2",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^10.9.4",
@@ -42,9 +43,11 @@
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
     "@types/uuid": "^3.4.4",
+    "async-wait-until": "^1.2.4",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "fake-indexeddb": "^2.0.4",
+    "jsdom": "^12.1.0",
     "mock-local-storage": "^1.0.5",
     "typescript": "^3.0.3"
   }
