--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
-    "js-nacl": "^1.2.2",
     "mime-types": "^2.1.20",
+    "moment": "^2.22.2",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.4",
     "rxjs": "~6.2.0",
-    "scryptsy": "^2.0.0",
     "uuid": "^3.3.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "rasm-crypt": "^0.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
