--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "async-wait-until": "^1.2.4",
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
+    "marked-ts": "^1.0.0-beta.4",
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
     "primeflex": "^1.0.0-rc.1",
