--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ctrl/ngx-codemirror": "^1.3.9",
     "@fortawesome/angular-fontawesome": "^0.2.1",
     "@fortawesome/fontawesome-free": "^5.4.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "async-wait-until": "^1.2.4",
+    "codemirror": "^5.40.2",
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
     "marked-ts": "^1.0.0-beta.4",
