--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
     "primeflex": "^1.0.0-rc.1",
-    "primeicons": "^1.0.0-beta.10",
-    "primeng": "^6.1.4",
+    "primeicons": "^1.0.0",
+    "primeng": "^6.1.7",
     "rxjs": "~6.2.0",
     "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
