--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "codemirror": "^5.40.2",
     "core-js": "^2.5.4",
     "dexie": "^2.0.4",
+    "fullcalendar": "4.0.0-alpha.2",
     "marked-ts": "^1.0.0-beta.4",
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
